--- a/chatnodejs-master/client/index.html
+++ b/chatnodejs-master/client/index.html
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="span3">
           <ul class="nav nav-list well">
-            <li class="nav-header">Local Users</li>
+            <li class="nav-header">Local Usuarios</li>
             <li ng-repeat="user in roster" ng-bind="user">
             </li>
           </ul>
@@ -69,12 +69,12 @@
           <table class="table table-striped table-bordered">
             <thead>
               <tr>
-                <th class="span2">Name</th>
-                <th class="span7">Text</th>
+                <th class="span2">Nombre</th>
+                <th class="span7">Texto</th>
               </tr>
             </thead>
             <tbody>
-              <tr ng-repeat="msg in messages">
+              <tr ng-repeat="Mensaje">
                 <td class="span2" ng-bind="msg.name"></td>
                 <td class="span7" ng-bind="msg.text"></td>
               </tr>
@@ -82,7 +82,7 @@
           </table>
           <div class="row controls">
             <form ng-submit="send()">
-              <div class="span2"><input type="text" class="input-block-level" ng-model="name" ng-change="setName()" placeholder="Your Name"></div>
+              <div class="span2"><input type="text" class="input-block-level" ng-model="name" ng-change="setName()" placeholder="Tu nombre"></div>
               <div class="input-append span7">
                 <input type="text" class="span6" ng-model="text" placeholder="Message">
                 <input type="submit" class="span1 btn btn-primary" value="Send" ng-disabled="!text">
